fix: added code change to set toast grid column spacing based on icon visibility

--- a/src/scss/_toasts.scss
+++ b/src/scss/_toasts.scss
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     grid-column: 1/4 !important;
     grid-row: 1/4 !important;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: 0 auto 1fr;
     padding: $swal2-toast-padding;
     overflow-y: hidden;
     background: $swal2-toast-background;
